--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;h3&gt;4. 如果我更换了设备，如何恢复购买？&lt;/h3&gt;</p>
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;p&gt;由于 PuppyFocus 是**一次性买断**，您可以在 App 内轻松恢复购买：&lt;/p&gt;</p>
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;ul&gt;</p>
-<p class="p1"><span class="Apple-converted-space">        </span>&lt;li&gt;请前往 App 的 **专注设置页面**。&lt;/li&gt;</p>
+<p class="p1"><span class="Apple-converted-space">        </span>&lt;li&gt;请前往 App 的 **专注设置页面 (07专注设置)**。&lt;/li&gt;</p>
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;li&gt;下滑到 **“购买管理”** 区域。&lt;/li&gt;</p>
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;li&gt;点击 **“恢复购买”** 按钮。&lt;/li&gt;</p>
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;li&gt;使用购买时的 Apple ID 即可恢复您的 Pro 特权。&lt;/li&gt;</p>
