更新隐私政策页面内容

--- a/privacy.html
+++ b/privacy.html
@@ -18,7 +18,7 @@
 
     <h1>🐶 PuppyFocus 隐私保护承诺 (v1.3.5)</h1>
     <p>更新日期：2025年11月19日</p>
-    <p>PuppyFocus (以下简称"本 App"或"我们") 是由 [您的姓名/个人开发者名称] 开发和运营的专注力管理 iOS 应用。我们非常重视您的隐私，本政策承诺您的专注数据仅属于您，并安全地存储在您的设备中。</p>
+    <p>PuppyFocus 是专注力管理 iOS 应用。我们非常重视您的隐私，本政策承诺您的专注数据仅属于您，并安全地存储在您的设备中。</p>
 
     <h3>我们对您的数据承诺：</h3>
 
