更新隐私政策页面：简化联系方式标题

--- a/privacy.html
+++ b/privacy.html
@@ -56,7 +56,7 @@
     <p>您有权要求我们删除您的所有数据。由于数据主要存储在您的设备本地，您可以通过删除 App 或在 App 内执行数据重置操作来实现。如需进一步协助或要求我们删除任何可能在后台存储的数据，请联系我们。</p>
 
     <div class="contact-info">
-        <h3>联系方式 (数据控制者)</h3>
+        <h3>联系方式</h3>
         <p>如对本隐私政策有任何疑问，或需要删除您的数据，请发送邮件至：</p>
         <p style="font-size: 1.2em; font-weight: bold;">
             <a href="mailto:gchenrun18@qq.com">gchenrun18@qq.com</a>
