--- a/privacy.html
+++ b/privacy.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-    <h1>🐶 PuppyFocus 隐私保护承诺 (v1.3.5)</h1>
+    <h1>🐶 PuppyFocus 隐私政策</h1>
     <p>更新日期：2025年11月19日</p>
     <p>PuppyFocus 是专注力管理 iOS 应用。我们非常重视您的隐私，本政策承诺您的专注数据仅属于您，并安全地存储在您的设备中。</p>
 
